# run0-pkexec-shim

./: Cargo.toml  LICENSE  README.md  flake.nix  package.nix
src/: cli.rs  lib.rs  main.rs  run0.rs  user.rs
tests/: exec.rs  integration.rs
